# SFBA-py

./: getStellar.py  node.py  simulation.py
cpp/SFBA/: 100witness  10witness  25witness  50witness  CMakeLists.txt  Config.hpp  Corrupted.txt  Corrupted10.txt  Corrupted25.txt  Corrupted50.txt  Dij.hpp  Global.cpp  Global.h  Node.cpp  Node.h  Node.hpp  SFBA  SFBA.hpp  SFBA_Fail_0.txt  SFBA_Fail_000.txt  SFBA_Fail_001.txt  SFBA_Fail_005.txt  SFBA_Fail_01.txt  SFBA_Fail_010.txt  SFBA_Fail_015.txt  SFBA_Fail_020.txt  SFBA_Fail_025.txt  SFBA_Fail_030.txt  SFBA_Fail_040.txt  SFBA_Fail_050.txt  SFBA_Liveness  Slice.cpp  Slice.h  Stellar.hpp  Stellar_Fail_000.txt  Stellar_Fail_005.txt  Stellar_Fail_010.txt  Stellar_Fail_015.txt  Stellar_Fail_020.txt  Stellar_Fail_030.txt  (+16 more)
cpp/SFBA/dataset/: RearrangeMe.md
cpp/SFBA/test/: 100witness.cpp  10witness.cpp  25witness.cpp  50witness.cpp  Liveness.cpp  Liveness2.cpp  Performance.cpp  cascadingFailure.cpp  newTest.cpp  newTest2.cpp  newTestStellar.cpp
find_quorum_core/: Makefile  findQuorumCore.py  findSCC.cpp
